# transferable-samplers

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.MD  CONTRIBUTING.md  LICENSE  NOTICE  PROGRESS.md  README.md  REFACTOR.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  test_self_improve.py
.github/workflows/: code-quality.yaml  docs.yml  essential-tests.yaml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  default_eval.yaml  default_train.yaml  early_stopping.yaml  ema_weight_averaging.yaml  eval.yaml  loss_evaluation.yaml  lr_monitor.yaml  model_checkpoint_last.yaml  model_checkpoint_loss.yaml  model_checkpoint_resampled_energy_w2.yaml  model_checkpoint_time.yaml  model_summary.yaml  populate_buffer.yaml  rich_progress_bar.yaml  sampling_evaluation.yaml  self_improve.yaml
configs/data/single_system/: AAA.yaml  AAAAAA.yaml  Ace-A-Nme.yaml  Ace-AAA-Nme.yaml  GYDPETGTWG.yaml  al2.yaml  al3.yaml  al4.yaml  al6.yaml  chignolin.yaml
configs/data/transferable/: 2aa.yaml  4aa.yaml  up_to_4aa.yaml  up_to_8aa.yaml
configs/debug/: default.yaml  fdr.yaml  limit.yaml  overfit.yaml  profiler.yaml
configs/experiment/evaluation/: ecnf++_al6_split.yaml  tarflow_al2_smc_cont.yaml  tarflow_al3_smc_cont.yaml  tarflow_al4_smc_cont.yaml  tarflow_al6_smc_cont.yaml  tarflow_chignolin_fk.yaml
configs/extras/: default.yaml
configs/hydra/: default.yaml
configs/launcher/: mila_48gb.yaml  mila_l40.yaml  mila_l40_main.yaml  mila_l40_unkillable.yaml  mila_rtx8000.yaml
configs/logger/: csv.yaml  many_loggers.yaml  wandb.yaml
configs/model/: default.yaml  flow_matching++.yaml  flow_matching.yaml  normalizing_flow.yaml
configs/model/net/: egnn_dynamics_ad2_cat.yaml  egnn_dynamics_transferable_md.yaml  prose.yaml  tarflow.yaml  tarflow_single_system.yaml
configs/model/optimizer/: adam_w.yaml
configs/model/prior/: normal_distribution.yaml
configs/model/scheduler/: cosine.yaml  onestep.yaml
configs/paths/: default.yaml
configs/trainer/: cpu.yaml  ddp.yaml  ddp_fork.yaml  ddp_sim.yaml  default.yaml  gpu.yaml  mps.yaml
docs/: README.md  _sidebar.md  contributing.md  design.md  index.html  paper-reproduction.md  usage.md
scripts/: run_benchmarks.sh  run_benchmarks_ddp.sh
scripts/aithyra/: h100_multi.sh
scripts/sbg/evaluation/: ecnf++_al2.sh  ecnf++_al3.sh  ecnf++_al6_split.sh  tarflow_al2_smcais.sh  tarflow_al3_samples.sh  tarflow_al3_smcais.sh  tarflow_al3_steps.sh  tarflow_al4_smcais.sh  tarflow_al6_smcais.sh  tarflow_chignolin.sh
scripts/sbg/training/: ecnf++_al2.sh  ecnf++_al3.sh  ecnf++_al4.sh  ecnf++_al6.sh  ecnf_al2.sh  ecnf_al3.sh  ecnf_al4.sh  tarflow_al2.sh  tarflow_al3.sh  tarflow_al4.sh  tarflow_al6.sh  tarflow_chignolin.sh
src/: eval.py  finetune.py  self_improve.py  self_refine.py  train.py
src/callbacks/: ema_weight_averaging.py  evaluation_callback.py  populate_buffer_callback.py  sampling_evaluation.py  sampling_evaluation_callback.py  self_improvement_callback.py
src/data/: base_datamodule.py  many_peptides_datamodule.py  normalization.py  single_peptide_datamodule.py  transferable_peptide_datamodule.py
src/data/datasets/: buffer.py  dummy_dataset.py  peptides_dataset.py  tensor_dataset.py  webdataset.py
src/data/energy/: energy.py  openmm.py  openmm_energy.py
src/data/preprocessing/: encodings.py  permutations.py  permutations.yaml  preprocessing.py  tica.py
src/data/transforms/: add_encodings.py  add_permutations.py  center_of_mass.py  padding.py  rotation.py  standardize.py
src/evaluation/: chirality.py  ensemble_evaluator.py  evaluator.py  metrics_and_plots.py
src/evaluation/diagnostics/: smc_plots.py
src/evaluation/metrics/: distribution_distances.py  ess.py  evaluate_peptide_data.py  jsd_metric.py  kmeans_jsd.py  mmd.py  optimal_transport.py  ramachandran.py  tica_metric.py  wasserstein_distances.py
src/evaluation/plots/: plot_atom_distances.py  plot_com_norms.py  plot_energies.py  plot_ramachandran.py  plot_tica.py  plot_utils.py
src/models/: base_lightning_module.py  buffer.py  flow_matching_module.py  flow_matching_module.txt  normalizing_flow_module.py  priors.py  transferable_boltzmann_generator_module.py  utils.py
src/models/neural_networks/: ema.py  embedder.py  wrappers.py
src/models/priors/: normal_distribution.py  prior.py
src/models/samplers/: base_sampler.py  base_sampler_class.py  continuous_time_smc_sampler.py  hmc_sampler.py  mala_sampler.py  proposal_sampler.py  sampler.py  smc_sampler.py  smc_sampler.txt  snis_sampler.py  ula_sampler.py  utils.py
src/models/sampling/: sampling_mixin.py  snis_sampler.py
src/nn/egnn/: egnn.py  gnn.py  (+2 more)
src/samplers/: filtering.py  resampling.py  smc_sampler.py  snis_sampler.py
src/transferable_samplers/: __init__.py  eval.py  train.py
src/utils/: __init__.py  batching_utils.py  chirality.py  data_types.py  dataclasses.py  dist_utils.py  energy_utils.py  huggingface.py  init_resume_utils.py  instantiators.py  logging_utils.py  model_checkpoint_callback.py  resampling.py  rich_utils.py  timer.py  timing_utils.py  utils.py  wandb_utils.py
tests/: conftest.py  test_eval.py  test_self_improve.py  test_smc.py  test_train.py  utils.py
tests/assets/: test_model_loss.py
tests/benchmark/: conftest.py  test_self_improve_benchmark.py  test_self_improve_prose_up_to_8aa.py  test_smc_benchmark.py  test_smc_prose_up_to_8aa.py  test_snis_benchmark.py  test_snis_ecnf_up_to_4aa.py  test_snis_prose_up_to_8aa.py
tests/configs/: test_experiment_configs.py
tests/helpers/: utils.py
tests/integrations/: test_self_improve_mwe.py  test_smc_mwe.py  test_snis_mwe.py  test_train_mwe.py
tests/mwe/: test_self_improve_mwe.py  test_smc_mwe.py  test_snis_mwe.py  test_train_mwe.py  test_train_resume_eval_mwe.py
tests/slurm/: run_all_tests.sh  run_all_tests_ddp.sh  run_all_tests_gpu.sh  run_test_eval.sh  run_test_train.sh  run_tests.sh  test_integrations_ddp.sh  test_integrations_gpu.sh  test_integrations_last_failed_ddp.sh  test_integrations_last_failed_gpu.sh
tests/unit/: test_nf_architecture.py
(+215 files in other folders)
