[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
[project]
name = "transferable-samplers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "huggingface-hub>=1.2.3",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3.2",
    "hydra-optuna-sweeper==1.2.0",
    "hydra-submitit-launcher>=1.2.0",
    "jupyterlab>=4.5.0",
    "lightning>=2.0.0",
    "matplotlib>=3.10.8",
    "mdtraj>=1.11.0",
    "networkx>=3.6.1",
    "nglview>=4.0",
    "numpy>=2.2.6",
    "openmm-cuda-12>=8.4.0.post2",
    "pot>=0.9.6.post1",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "rich>=14.2.0",
    "rootutils>=1.0.7",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "tables>=3.10.2",
    "tensorboard>=2.20.0",
    "torch>=2.0.0",
    "torchdiffeq>=0.2.5",
    "torchdyn>=1.0.6",
    "torchmetrics>=0.11.4",
    "torchsde>=0.2.6",
    "torchvision>=0.15.0",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
    "webdataset>=1.0.2",
    "wget>=3.2",
    "zuko>=1.5.0",
]
